--- a/src/pages/hello-ionic/hello-ionic.scss
+++ b/src/pages/hello-ionic/hello-ionic.scss
@@ -1,3 +1,16 @@
 page-hello-ionic {
+    .blue{
+        background-color: dodgerblue;
+        min-width: 70%;
+    }
+    
+    .red{
+        background-color: darkred;
+        min-width: 70%;
+    }
+    .orange{
+        background-color: orange;
+        min-width: 70%;
+    }
 
 }
