--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,10 @@
-<ion-menu [content]="content">
+<ion-menu persistent="true" [content]="content">
 
   <ion-header>
     <ion-toolbar>
+      <div text-center>
         <img src="../../assets/LogotipoBarra.png" alt="Logotipo">
+      </div>
     </ion-toolbar>
   </ion-header>
 
